Fix alignment of logos on about page

--- a/source/stylesheets/_component__recent_press.scss
+++ b/source/stylesheets/_component__recent_press.scss
@@ -12,6 +12,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
+    align-items: stretch;
 
     // at smaller sizes
     @media all and (max-width: $breakpoint) {
